--- a/Registre.html
+++ b/Registre.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registre </title>
-    <link rel="stylesheet" href="Style/styleRegistre.css">
+    <link rel="stylesheet" href="styleRegistre.css">
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
