--- a/Reservation.html
+++ b/Reservation.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservation</title>
-    <link rel="stylesheet" href="Style/Style.css">
-    <link rel="stylesheet" href="Style/Res.css">
+    /*<link rel="stylesheet" href="Style/Style.css">*/
+    <link rel="stylesheet" href="Res.css">
 </head>
 <body>
     <nav>
