--- a/Login.html
+++ b/Login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="travel">
-      <img src="pic/LogoTRAVEL.png" alt="">
+      <img src="LogoTRAVEL.png" alt="">
       <div class="desc">
         
           We offer you the best travel deals and services around the world. Whether you're looking for a tropical getaway or a cultural journey, we're here to make your dream a reality
