--- a/Registre.html
+++ b/Registre.html
@@ -10,7 +10,7 @@
 <body>
     
     <div class="travel"><a href="index.html">
-        <img src="pic/LogoTRAVEL.png" alt="">
+        <img src="LogoTRAVEL.png" alt="">
         </a>
     </div>
     <div class="nav">
